--- a/bughound_webapp/src/app/app.component.html
+++ b/bughound_webapp/src/app/app.component.html
@@ -1,16 +1,41 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<form>
-  Name:
-  <input type="text" name="firstname" ng-model="user.firstname" ng-blur="update(user)"><br>
-  Username:
-  <input type="text" name="lastname" ng-model="user.lastname" ng-blur="update(user)"><br>
-  Password:
-  <input type="text" name="password" ng-model="user.password" ng-blur="update(user)"><br>
-  User Level:
-  <input type="text" name="userlevel" ng-model="user.userlevel" ng-blur="update(user)"><br>
-</form>
+<div *ngIf="modeEdit == false" style="font-size: 2em">
+  <form>
+    Name:
+    <input type="text" name="name" [(ngModel)]="employee.name" ><br>
+    Username:
+    <input type="text" name="username"[(ngModel)]="employee.username" ><br>
+    Password:
+    <input type="text" name="password" [(ngModel)]="employee.password"><br>
+    User Level:
+    <input type="number" name="userlevel" [(ngModel)]="employee.user_level"><br>
+  </form>
 
-<input type="submit" value="Submit" (click)="submit()">
-<input type="submit" value="Cancel">
+  <input type="submit" value="Submit" (click)="submit()">
+  <input type="submit" value="Cancel">
+
+
+  <div *ngFor="let employee of employees">
+    <a (click)="editEmployee(employee)" style="cursor: pointer; color: darkblue">{{employee.id}}</a><span> - {{employee.name}}</span>
+  </div>
+
+</div>
+
+
+<div *ngIf="modeEdit == true" style="font-size: 2em">
+  <form>
+    Name:
+    <input type="text" name="name" [(ngModel)]="employee.name" ><br>
+    Username:
+    <input type="text" name="username"[(ngModel)]="employee.username" ><br>
+    Password:
+    <input type="text" name="password" [(ngModel)]="employee.password"><br>
+    User Level:
+    <input type="number" name="userlevel" [(ngModel)]="employee.user_level"><br>
+  </form>
+
+  <input type="submit" value="Submit" (click)="updateEmployee()">
+  <input type="submit" value="Cancel" (click)="cancelEdit()">
+</div>
 
 <router-outlet></router-outlet>
