--- a/bughound_webapp/src/app/bugs/bugs-add/bugs-add.component.html
+++ b/bughound_webapp/src/app/bugs/bugs-add/bugs-add.component.html
@@ -8,22 +8,57 @@
                 <div class="content">
                     <form>
                         <div class="row">
-                            <div class="col-md-5">
-                                <div class="form-group">
+                            <div class="col-md-6">
+                                <div class="form-group select-form">
                                     <label>Program</label>
-                                    <input type="text" class="form-control" placeholder="Program">
+                                    <ng-select [items]="programs"
+                                               bindLabel="name"
+                                               [(ngModel)]="selectedProgram"
+                                               [ngModelOptions]="{standalone: true}"
+                                               [clearable]="false"
+                                               (change)="programChanged($event)"
+                                               width="100%">
+                                    </ng-select>
                                 </div>
                             </div>
-                            <div class="col-md-3">
+                            <div class="col-md-6">
                                 <div class="form-group">
                                     <label>Release</label>
-                                    <input type="text" class="form-control" placeholder="Release">
+                                    <ng-select [items]="selectedProgram?.versions"
+                                               bindLabel="name"
+                                               [(ngModel)]="selectedVersion"
+                                               [ngModelOptions]="{standalone: true}"
+                                               [clearable]="false"
+                                               width="100%">
+                                    </ng-select>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-4">
+                                <div class="form-group">
+                                    <label>Report Type</label>
+                                    <ng-select [items]="report_types"
+                                               bindLabel="name"
+                                               bindValue="value"
+                                               [(ngModel)]="bug.report_type"
+                                               [ngModelOptions]="{standalone: true}"
+                                               [clearable]="false"
+                                               width="100%">
+                                    </ng-select>
                                 </div>
                             </div>
                             <div class="col-md-4">
                                 <div class="form-group">
-                                    <label>Report Type</label>
-                                    <input type="text" class="form-control" placeholder="Report Type">
+                                    <label>Severity</label>
+                                    <ng-select [items]="severities"
+                                               bindLabel="name"
+                                               bindValue="value"
+                                               [(ngModel)]="bug.severity"
+                                               [ngModelOptions]="{standalone: true}"
+                                               [clearable]="false"
+                                               width="100%">
+                                    </ng-select>
                                 </div>
                             </div>
                         </div>
@@ -31,7 +66,8 @@
                             <div class="col-md-12">
                                 <div class="form-group">
                                     <label>Problem summary</label>
-                                    <input type="text" class="form-control" placeholder="Summary">
+                                    <input type="text" class="form-control" placeholder="Summary"
+                                           [(ngModel)]="bug.summary" [ngModelOptions]="{standalone: true}">
                                 </div>
                             </div>
                         </div>
@@ -40,7 +76,8 @@
                                 <div class="form-group">
                                     <label>Can you reproduce this problem?</label>
                                     <div class="checkbox">
-                                        <input type="checkbox" value="" id="checkbox1" data-toggle="checkbox">
+                                        <input type="checkbox" value="" id="checkbox1" data-toggle="checkbox"
+                                               [(ngModel)]="bug.reproducible" [ngModelOptions]="{standalone: true}">
                                         <label for="checkbox1"></label>
                                     </div>
                                 </div>
@@ -50,7 +87,8 @@
                             <div class="col-md-12">
                                 <div class="form-group">
                                     <label>Problem and how to reproduce it</label>
-                                    <textarea class="form-control" rows="4"></textarea>
+                                    <textarea class="form-control" rows="4"
+                                              [(ngModel)]="bug.description" [ngModelOptions]="{standalone: true}"></textarea>
                                 </div>
                             </div>
                         </div>
@@ -58,11 +96,22 @@
                             <div class="col-md-12">
                                 <div class="form-group">
                                     <label>Suggested Fix</label>
-                                    <textarea class="form-control" rows="4"></textarea>
+                                    <textarea class="form-control" rows="4"
+                                              [(ngModel)]="bug.suggested_fix" [ngModelOptions]="{standalone: true}"></textarea>
                                 </div>
                             </div>
                         </div>
                     </form>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-md-12">
+            <div class="card">
+                <div class="content bottom-bar">
+                    <button class="btn btn-info btn-fill" (click)="createBug()">Create</button>
                 </div>
             </div>
         </div>
