--- a/bughound_webapp/src/app/bugs/bugs-list/bugs-list.component.scss
+++ b/bughound_webapp/src/app/bugs/bugs-list/bugs-list.component.scss
@@ -1,8 +1,14 @@
 
-.content {
-  text-align: right;
-}
 
 .toolbar {
   margin-top: 20px;
+
+  .content {
+    text-align: right;
+  }
+}
+
+
+.buttons-container {
+  display: flex;
 }
