--- a/bughound_webapp/src/app/bugs/bugs-add/bugs-add.component.html
+++ b/bughound_webapp/src/app/bugs/bugs-add/bugs-add.component.html
@@ -112,6 +112,8 @@
             <div class="card">
                 <div class="content bottom-bar">
                     <button class="btn btn-info btn-fill" (click)="createBug()">Create</button>
+                    <button class="btn btn-success btn-fill" (click)="resetBug()">Reset</button>
+                    <button class="btn btn-danger btn-fill" (click)="cancelBug()">Cancel</button>
                 </div>
             </div>
         </div>
