More error handling

--- a/bughound_webapp/src/app/programs/programs-add/programs-add.component.html
+++ b/bughound_webapp/src/app/programs/programs-add/programs-add.component.html
@@ -67,6 +67,7 @@
             <div class="card">
                 <div class="content bottom-bar">
                     <button class="btn btn-info btn-fill" (click)="createProgram()">Create</button>
+                    <button class="btn btn-danger btn-fill" (click)="cancelProgram()">Cancel</button>
                 </div>
             </div>
         </div>
