--- a/bughound_webapp/src/app/programs/programs-edit/programs-edit.component.html
+++ b/bughound_webapp/src/app/programs/programs-edit/programs-edit.component.html
@@ -65,6 +65,46 @@
     <div class="row">
         <div class="col-md-12">
             <div class="card">
+                <div class="header">
+                    <h4 class="title">Area</h4>
+                </div>
+                <div class="content">
+                    <div class="content table-responsive table-full-width">
+                        <table class="table table-hover table-striped">
+                            <thead>
+                            <tr>
+                                <th class="text-center">Title</th>
+                                <th class="text-center">Delete</th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            <tr *ngFor="let title of program?.versions;index as idx" class="row-table">
+                                <td class="text-center">
+                                    <div class="form-group">
+                                        <label>Area {{idx}}</label>
+                                        <input type="text" class="form-control" placeholder="Area"
+                                               [ngModel]="title?.name" (ngModelChange)="title.name = $event;checkNumberInput()"
+                                               [ngModelOptions]="{standalone: true}">
+                                    </div>
+
+                                </td>
+                                <td class="text-center">
+                                    <button class="btn btn-danger btn-fill" (click)="deleteVersion(idx)"
+                                            [disabled]="idx == 0">
+                                        <fa-icon [icon]="['far', 'trash-alt']" size="sm"></fa-icon>
+                                    </button>
+                                </td>
+                            </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    <div class="row">
+        <div class="col-md-12">
+            <div class="card">
                 <div class="content bottom-bar">
                     <button class="btn btn-info btn-fill" (click)="updateProgram()">Update</button>
                 </div>
