--- a/bughound_webapp/src/app/shared/navbar/navbar.component.html
+++ b/bughound_webapp/src/app/shared/navbar/navbar.component.html
@@ -21,9 +21,9 @@
 
             <ul class="nav navbar-nav navbar-right">
                 <li>
-                    <a href="#">
-                        <p>Account</p>
-                    </a>
+                    <div class="email-account">
+                        <p>{{email}}</p>
+                    </div>
                 </li>
                 <li>
                     <a (click)="logout()" class="clickable">
