--- a/bughound_webapp/src/app/programs/programs-edit/programs-edit.component.html
+++ b/bughound_webapp/src/app/programs/programs-edit/programs-edit.component.html
@@ -49,7 +49,7 @@
                                 </td>
                                 <td class="text-center">
                                     <button class="btn btn-danger btn-fill" (click)="deleteVersion(idx)"
-                                            [disabled]="idx == 0">
+                                            [disabled]="idx == 0 && !canDelete()">
                                         <fa-icon [icon]="['far', 'trash-alt']" size="sm"></fa-icon>
                                     </button>
                                 </td>
