--- a/bughound_webapp/src/styles.css
+++ b/bughound_webapp/src/styles.css
@@ -2,6 +2,7 @@
 
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
 @import "~@ng-select/ng-select/themes/default.theme.css";
+@import "~ng-pick-datetime/assets/style/picker.min.css";
 
 .clickable {
     cursor: pointer;
