Fix delete button area

--- a/bughound_webapp/src/app/programs/programs-add/programs-add.component.html
+++ b/bughound_webapp/src/app/programs/programs-add/programs-add.component.html
@@ -89,7 +89,7 @@
     
                                 </td>
                                 <td class="text-center">
-                                    <button class="btn btn-danger btn-fill" (click)="deleteVersion(idx)"
+                                    <button class="btn btn-danger btn-fill" (click)="deleteArea(idx)"
                                             [disabled]="idx == 0">
                                         <fa-icon [icon]="['far', 'trash-alt']" size="sm"></fa-icon>
                                     </button>
