--- a/bughound_webapp/src/app/bugs/bugs-edit/bugs-edit.component.scss
+++ b/bughound_webapp/src/app/bugs/bugs-edit/bugs-edit.component.scss
@@ -12,3 +12,9 @@
   height: 40px;
   box-shadow: none;
 }
+
+.dp-input[disabled] {
+  background-color: #F5F5F5;
+  color: #888888;
+  cursor: not-allowed !important;
+}
