--- a/bughound_webapp/src/app/bugs/bugs-edit/bugs-edit.component.html
+++ b/bughound_webapp/src/app/bugs/bugs-edit/bugs-edit.component.html
@@ -125,7 +125,7 @@
                             <div class="col-md-5">
                                 <div class="form-group select-form">
                                     <label>Functionnal Area</label>
-                                    <ng-select [items]="bug.program?.areas"
+                                    <ng-select [items]="bug?.program?.areas"
                                                [compareWith]="compId"
                                                bindLabel="name"
                                                [disabled]="disabledDevReport()"
