--- a/bughound_webapp/src/app/bugs/bugs-list/bugs-list.component.scss
+++ b/bughound_webapp/src/app/bugs/bugs-list/bugs-list.component.scss
@@ -4,11 +4,16 @@
   margin-top: 20px;
 
   .content {
-    text-align: right;
+    display: flex;
+    justify-content: space-between;
   }
 }
 
 
 .buttons-container {
   display: flex;
+}
+
+.mat-form-field {
+  width: 100%;
 }
