--- a/bughound_webapp/src/app/bugs/bugs-list/bugs-list.component.html
+++ b/bughound_webapp/src/app/bugs/bugs-list/bugs-list.component.html
@@ -1,68 +1,134 @@
 <div class="main-content">
 
-  <div class="row toolbar">
-    <div class="col-md-12">
-      <div class="card">
-        <div class="content">
-            <button *ngIf="isDevelopper()" class="btn btn-primary btn-fill" [disabled]="checkedBugs()" (click)="assignBugs()" >Assign bugs</button>
-          <button class="btn btn-info btn-fill" (click)="navigateToUrl('add')">Report a bug</button>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-md-12">
-      <div class="card">
-        <div class="header">
-          <h4 class="title">Bugs</h4>
-        </div>
-        <div class="content table-responsive table-full-width">
-          <table class="table table-hover table-striped">
-            <thead>
-                <tr>
-                    <th class="text-center">#</th>
-                    <th class="text-center">#</th>
-                    <th class="text-center">Summary</th>
-                    <th class="text-center">Program - Version</th>
-                    <th *ngIf="isDevelopper() || isAdmin()">Assigned to</th>
-                    <th class="text-center">Report type</th>
-                    <th class="text-center">Severity</th>
-                    <th class="text-center">Reported Date</th>
-                    <th class="text-center">Detail</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr *ngFor="let bug of bugs?.results">
-                    <td class="text-center">
-                        <div class="checkbox" *ngIf="bug.assigned_to == null">
-                            <input type="checkbox" [(ngModel)]="bug.checked" [id]="'checkbox' + bug.id" data-toggle="checkbox">
-                            <label [for]="'checkbox' + bug.id"></label>
+    <div class="row toolbar">
+        <div class="col-md-12">
+            <div class="card">
+                <div class="content row">
+                    <div class="filters col-md-8">
+                        <div class="col-md-3">
+                            <mat-form-field>
+                                <input matInput type="text" placeholder="Rechercher..." [(ngModel)]="filters.search" [formControl]="searchControl">
+                            </mat-form-field>
                         </div>
-                    </td>
-                    <td class="text-center">{{bug.id}}</td>
-                    <td class="text-center">{{(bug.summary.length > 25) ? (bug.summary | slice:0:25) + '...' : bug.summary }}</td>
-                    <td class="text-center">{{bug.program.name}} - {{bug.bug_version.name}}</td>
-                    <th *ngIf="isDevelopper() || isAdmin()">{{bug.assigned_to.username}}</th>
-                    <td class="text-center">{{getName(bug.report_type, 'REPORT_TYPES')}}</td>
-                    <td class="text-center">{{getName(bug.severity, 'SEVERITIES')}}</td>
-                    <td class="text-center">{{bug.reported_date}}</td>
-                    <td class="actions-container-table">
-                        <div class="buttons-container">
-                            <button class="btn btn-primary btn-fill" (click)="navigateToUrl('edit/' + bug.id)">
-                                <fa-icon [icon]="['far', 'eye']" size="sm"></fa-icon>
-                            </button>
-                            <button class="btn btn-danger btn-fill" *ngIf="canDelete()" (click)="openDialogDeleteBug(bug)">
-                              <fa-icon [icon]="['far', 'trash-alt']" size="sm"></fa-icon>
-                          </button>
+                        <div class="col-md-3">
+                            <mat-form-field>
+                                <mat-select placeholder="Repoducible" [(ngModel)]="filters.reproducible" (selectionChange)="loadBugs()">
+                                    <mat-option>---</mat-option>
+                                    <mat-option *ngFor="let rep of filtersTrueFalse" [value]="rep.value">
+                                        {{rep.name}}
+                                    </mat-option>
+                                </mat-select>
+                            </mat-form-field>
                         </div>
-                    </td>
-                </tr>
-            </tbody>
-          </table>
-
+                        <div class="col-md-3">
+                            <mat-form-field>
+                                <mat-select placeholder="Status" [(ngModel)]="filters.status" (selectionChange)="loadBugs()">
+                                    <mat-option>---</mat-option>
+                                    <mat-option *ngFor="let rep of statusFilters" [value]="rep.value">
+                                        {{rep.name}}
+                                    </mat-option>
+                                </mat-select>
+                            </mat-form-field>
+                        </div>
+                        <div class="col-md-3">
+                            <mat-form-field>
+                                <mat-select placeholder="Severity" [(ngModel)]="filters.severity" (selectionChange)="loadBugs()">
+                                    <mat-option>---</mat-option>
+                                    <mat-option *ngFor="let rep of severitiesFilters" [value]="rep.value">
+                                        {{rep.name}}
+                                    </mat-option>
+                                </mat-select>
+                            </mat-form-field>
+                        </div>
+                        <div class="col-md-4">
+                            <mat-form-field>
+                                <mat-select placeholder="Program" [(ngModel)]="filters.program" (selectionChange)="loadBugs()">
+                                    <mat-option>---</mat-option>
+                                    <mat-option *ngFor="let rep of programs" [value]="rep">
+                                        {{rep.name}}
+                                    </mat-option>
+                                </mat-select>
+                            </mat-form-field>
+                        </div>
+                        <div class="col-md-4">
+                            <mat-form-field>
+                                <mat-select placeholder="Version" [(ngModel)]="filters.version" (selectionChange)="loadBugs()">
+                                    <mat-option>---</mat-option>
+                                    <mat-option *ngFor="let rep of filters.program?.versions" [value]="rep">
+                                        {{rep.name}}
+                                    </mat-option>
+                                </mat-select>
+                            </mat-form-field>
+                        </div>
+                    </div>
+                    <div class="actions-container col-md-4">
+                        <button *ngIf="isDevelopper()" class="btn btn-primary btn-fill" [disabled]="checkedBugs()"
+                                (click)="assignBugs()">Assign bugs</button>
+                        <button class="btn btn-info btn-fill" (click)="navigateToUrl('add')">Report a bug</button>
+                    </div>
+                </div>
+            </div>
         </div>
-      </div>
     </div>
+    <div class="row">
+        <div class="col-md-12">
+            <div class="card">
+                <div class="header">
+                    <h4 class="title">Bugs</h4>
+                </div>
+                <div class="content table-responsive table-full-width">
+                    <table class="table table-hover table-striped">
+                        <thead>
+                        <tr>
+                            <th class="text-center">#</th>
+                            <th class="text-center">#</th>
+                            <th class="text-center">Summary</th>
+                            <th class="text-center">Program - Version</th>
+                            <th *ngIf="isDevelopper() || isAdmin()">Assigned to</th>
+                            <th class="text-center">Report type</th>
+                            <th class="text-center">Status</th>
+                            <th class="text-center">Severity</th>
+                            <th class="text-center">Reported Date</th>
+                            <th class="text-center">Detail</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr *ngFor="let bug of bugs?.results">
+                            <td class="text-center">
+                                <div class="checkbox" *ngIf="bug.assigned_to == null">
+                                    <input type="checkbox" [(ngModel)]="bug.checked" [id]="'checkbox' + bug.id"
+                                           data-toggle="checkbox">
+                                    <label [for]="'checkbox' + bug.id"></label>
+                                </div>
+                            </td>
+                            <td class="text-center">{{bug.id}}</td>
+                            <td class="text-center">{{(bug.summary.length > 25) ? (bug.summary | slice:0:25) + '...' :
+                                bug.summary }}
+                            </td>
+                            <td class="text-center">{{bug.program.name}} - {{bug.bug_version.name}}</td>
+                            <th *ngIf="isDevelopper() || isAdmin()">{{bug.assigned_to.username}}</th>
+                            <td class="text-center">{{getName(bug.report_type, 'REPORT_TYPES')}}</td>
+                            <td class="text-center">{{getName(bug.status, 'STATUS')}}</td>
+                            <td class="text-center">{{getName(bug.severity, 'SEVERITIES')}}</td>
+                            <td class="text-center">{{bug.reported_date}}</td>
+                            <td class="actions-container-table">
+                                <div class="buttons-container">
+                                    <button class="btn btn-primary btn-fill" (click)="navigateToUrl('edit/' + bug.id)">
+                                        <fa-icon [icon]="['far', 'eye']" size="sm"></fa-icon>
+                                    </button>
+                                    <button class="btn btn-danger btn-fill" *ngIf="canDelete()"
+                                            (click)="openDialogDeleteBug(bug)">
+                                        <fa-icon [icon]="['far', 'trash-alt']" size="sm"></fa-icon>
+                                    </button>
+                                </div>
+                            </td>
+                        </tr>
+                        </tbody>
+                    </table>
 
-  </div>
+                </div>
+            </div>
+        </div>
+
+    </div>
 </div>
