Fix bug display list bugs

--- a/bughound_webapp/src/app/bugs/bugs-list/bugs-list.component.html
+++ b/bughound_webapp/src/app/bugs/bugs-list/bugs-list.component.html
@@ -42,7 +42,7 @@
                     <td class="text-center">{{bug.id}}</td>
                     <td class="text-center">{{(bug.summary.length > 25) ? (bug.summary | slice:0:25) + '...' : bug.summary }}</td>
                     <td class="text-center">{{bug.program.name}} - {{bug.bug_version.name}}</td>
-                    <th *ngIf="isDevelopper() || isAdmin()">{{bug.assigned_to.username}}</th>
+                    <th *ngIf="isDevelopper() || isAdmin()">{{bug.assigned_to?.username}}</th>
                     <td class="text-center">{{getName(bug.report_type, 'REPORT_TYPES')}}</td>
                     <td class="text-center">{{getName(bug.severity, 'SEVERITIES')}}</td>
                     <td class="text-center">{{bug.reported_date}}</td>
