--- a/bughound_webapp/src/app/bugs/bugs-list/bugs-list.component.scss
+++ b/bughound_webapp/src/app/bugs/bugs-list/bugs-list.component.scss
@@ -7,8 +7,21 @@
     display: flex;
     justify-content: space-between;
   }
+
+  .actions-container {
+    display: flex;
+
+    justify-content: space-around;
+    .plain-btn {
+      height: fit-content;
+    }
+  }
 }
 
+.open .dropdown-menu {
+  position: absolute;
+  top: 40px;
+}
 
 .buttons-container {
   display: flex;
