--- a/bughound_webapp/src/app/bugs/bugs-edit/bugs-edit.component.html
+++ b/bughound_webapp/src/app/bugs/bugs-edit/bugs-edit.component.html
@@ -3,7 +3,7 @@
         <div class="col-md-12">
             <div class="card">
                 <div class="header">
-                    <h4 class="title">Reported by {{bug?.reported_by?.first_name}} {{bug?.reported_by?.last_name}}</h4>
+                    <h4 class="title">Reported by {{bug?.reported_by?.username}}</h4>
                 </div>
                 <div class="content">
                     <form>
